recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: missing arguments for method droite in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	var coté = droite
                   ^Tree:16: error: missing arguments for method gauche in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	coté = gauche
               ^Tree:26: error: not found: value fini
	coté = fini
               ^