recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var longueur = length
	var etage = steps
	var coté = droite
	
	current(steps)

	if (coté == droite) {
	avance(length)
	droite(angle)

	tree(etage,longueur,angle,shrink)

	coté = gauche
	}

	else if (coté == gauche) {
	gauche(angle)
	recule(length)
	gauche(2*angle)

	tree(etage,longueur,angle,shrink)

	coté = fini
	}

	else {
	longueur = longueur * shrink
	etage -= 1
	}
			
}
